...
      crossAxisSpacing: isTablet ? 20 : 16,
      mainAxisSpacing: isTablet ? 20 : 16,
      childAspectRatio: isTablet ? 1.1 : 0.95,
      children: [
        _buildSummaryCard(
          context,
          title: 'Total Revenue',
          value:
              '\$${provider.summary?.totalRevenue.toStringAsFixed(2) ?? '0.00'}',
          icon: AppIcons.attachMoneyRounded,
          color: colorScheme.primary,
          isTablet: isTablet,
        ),
        _buildSummaryCard(
          context,
          title: 'Total Transactions',
          value: '${provider.summary?.totalTransactions ?? 0}',
          icon: AppIcons.receiptLongRounded,
          color: colorScheme.secondary,
          isTablet: isTablet,
        ),
        _buildSummaryCard(
...
